--- a/AC-STYLE-checkpoint-2/gallery.html
+++ b/AC-STYLE-checkpoint-2/gallery.html
@@ -20,10 +20,10 @@
           <div class="brand-logo-gallery">
             <div class="logo-attach">
               <img src="assets/media/logo.png" alt="" />
-              <h1>Flex</h1>
+              <h2>Flex</h1>
             </div>
 
-            <h4>Home</h4>
+            <a href="index.html"><h4>Home</h4></a>
           </div>
           <div class="aside-text">
             <h2>Full-stack developer, product designer, and a traveller</h2>
@@ -34,23 +34,23 @@
             </p>
           </div>
           <div class="sm-icons-gallery">
-            <a href="">
-              <i class="fab fa-facebook"></i>
+            <a href="#">
+             <img src="assets/media/icon/facebook-icon.png" alt="">
             </a>
-            <a href="">
-              <i class="fab fa-twitter"></i>
+            <a href="#">
+              <img src="assets/media/icon/twitter-icon.png" alt="">
             </a>
-            <a href="">
-              <i class="fab fa-dribbble"></i>
+            <a href="#">
+              <img src="assets/media/icon/dribbble.png" alt="">
             </a>
-            <a href="">
-              <i class="fab fa-linkedin"></i>
+            <a href="#">
+              <img src="assets/media/icon/linkedin.png" alt="">
             </a>
           </div>
         </div>
       </aside>
       <main>
-        <h1>Gallery</h1>
+        <h1 class="gallery-header">Gallery</h1>
         <div class="main-gallery-images">
           <div class="gallery-images-1">
             <img src="assets/media/gallery/01.jpg" alt="" />
